@@ -10,26 +10,17 @@ probably not ready for you yet.
 
 ## Build
 
-Requires Clojure, GraalVM version 22.3.1, and the Rust toolchain.
+Requires Clojure, babashka, GraalVM version 22.3.1, and Rust.
 
 If you are using a recent version of MacOS, have all the deps
 installed, and are a relatively lucky person, it might be as easy as
 doing this from the top-level of this project's directory structure
-(making sure that your default Java is the GraalVM one):
+(making sure that the Java on your path is the GraalVM version
+mentioned above):
 
 ``` shell
-$ cd clj
-$ clj -T:build libscimacs
-$ native-image --shared -cp clj/target/uber.jar -H:Name=LibScimacs --enable-preview -H:+ReportExceptionStackTraces -J-Dclojure.spec.skip-macros=true -J-Dclojure.compiler.direct-linking=true --verbose --no-fallback --no-server -J-Xmx3g
-$ cd ..
-$ cargo build
-$ ln -s target/debug/libscimacs.dylib ./scimacs.dylib
+$ bb all
 ```
-
-or simply run `bb all` if you have babashka installed. Run `bb tasks` for viewing all tasks.
-
-The last step will give you a loadable module suitable for use with
-emacs in the top-level of the project.
 
 ## Testing
 
@@ -40,9 +31,9 @@ work. It's invoked like this (`chmod` if you have to):
 $ ./test.el
 ```
 
-Note that the shebang line in this file assumes particular version of
-emacs at the place where homebrew installs it. It's entirely likely
-that you have a different version installed in a different place, say
+Note that the shebang line in this file assumes a particular version
+of emacs at the path where homebrew installs it. It's entirely likely
+that you have a different version installed in a different place, so
 you may prefer to use:
 
 ``` shell
@@ -51,7 +42,7 @@ $ emacs --script test.el
 
 ## Using
 
-See `test.el` for the current _single function_ API of this
-library. Additional Work will be required to make things more pleasant
-to use from within emacs, including the addition of some callback
-functions to operate on buffers and such.
+See `test.el` for how to load this module in emacs. It currently has a
+_single function_ API. Additional Work will be required to make things
+more pleasant to use from within emacs, including the addition of some
+callback functions on the `sci` side to operate on buffers and such.
